@@ -13,8 +13,8 @@ found in the LICENSE file.
 
 #include "link_redis.cpp"
 
-#define MAX_PACKET_SIZE		32 * 1024 * 1024
-#define ZERO_BUFFER_SIZE	8
+#define MAX_PACKET_SIZE		128 * 1024 * 1024
+#define INIT_BUFFER_SIZE	8
 
 int Link::min_recv_buf = 8 * 1024;
 int Link::min_send_buf = 8 * 1024;
@@ -37,8 +37,8 @@ Link::Link(bool is_server){
 		// alloc memory lazily
 		//input = new Buffer(Link::min_recv_buf);
 		//output = new Buffer(Link::min_send_buf);
-		input = new Buffer(ZERO_BUFFER_SIZE);
-		output = new Buffer(ZERO_BUFFER_SIZE);
+		input = new Buffer(INIT_BUFFER_SIZE);
+		output = new Buffer(INIT_BUFFER_SIZE);
 	}
 }
 
@@ -177,7 +177,7 @@ Link* Link::accept(){
 }
 
 int Link::read(){
-	if(input->total() == ZERO_BUFFER_SIZE){
+	if(input->total() == INIT_BUFFER_SIZE){
 		input->grow();
 	}
 	int ret = 0;
@@ -213,7 +213,7 @@ int Link::read(){
 }
 
 int Link::write(){
-	if(output->total() == ZERO_BUFFER_SIZE){
+	if(output->total() == INIT_BUFFER_SIZE){
 		output->grow();
 	}
 	int ret = 0;
